--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,7 +6,7 @@
 
     <div class="switch-container">
       <label id="switch" class="switch">
-        <input type="checkbox" onchange="toggleTheme()" id="slider">
+        <input type="checkbox" onchange="toggleTheme()" id="slider" />
         <span class="slider round overlay"></span>
       </label>
     </div>
@@ -31,5 +31,5 @@
     </button>
   </div>
 
-  <script src="../js/switcher.js"></script>
+  <script src="./js/switcher.js"></script>
 </header>
