--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,13 +14,13 @@
     <nav class="navigation">
       <ul class="nav-list-head">
         <li class="nav-item-head">
-          <a href="" class="hover-link">About me</a>
+          <a href="#about" class="hover-link">About me</a>
         </li>
         <li class="nav-item-head">
-          <a href="" class="hover-link">Projects</a>
+          <a href="#projects" class="hover-link">Projects</a>
         </li>
         <li class="nav-item-head">
-          <a href="" class="hover-link">Contacts</a>
+          <a href="#contacts" class="hover-link">Contacts</a>
         </li>
       </ul>
     </nav>
