--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -6,24 +6,34 @@
       >
       <ul class="footer-list">
         <li class="footer-item">
-          <a href="https://www.instagram.com/goitclub/" class="hover-link"
+          <a
+            href="https://www.instagram.com/goitclub/"
+            class="hover-link"
+            target="_blank"
             >Instagram</a
           >
         </li>
         <li class="footer-item">
-          <a href="https://www.facebook.com/goITclub/" class="hover-link"
+          <a
+            href="https://www.facebook.com/goITclub/"
+            class="hover-link"
+            target="_blank"
             >Facebook</a
           >
         </li>
         <li class="footer-item">
           <a
             href="https://www.linkedin.com/school/goit-start-your-career-in-it"
+            target="_blank"
             class="hover-link"
             >Linkedin</a
           >
         </li>
         <li class="footer-item">
-          <a href="https://github.com/1ster14ka/js-avengers" class="hover-link"
+          <a
+            href="https://github.com/1ster14ka/js-avengers"
+            class="hover-link"
+            target="_blank"
             >GitHub</a
           >
         </li>
