--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,9 +1,5 @@
 <section class="section-hero">
   <div class="container hero-container">
-    <!-- <svg class="hero-svg" width="320">
-      <use href="../img/sprite.svg#icon-decor-bg-hero-mob"></use>
-    </svg> -->
-    <!-- <img src="../img/bg-img/bg-mob-hero.png" alt="" class="bg-hero" /> -->
     <h1 class="title">
       Hello, I am
       <img
@@ -21,7 +17,9 @@
               href="./img/svg-icons/symbol-defs.svg#icon-icon-arrow2-1"
             ></use>
           </svg>
-          <a href="" class="hero-link">Order the project</a>
+          <a href="#contacts" class="hero-link" target="_blank"
+            >Order the project</a
+          >
         </div>
         <div class="background-wrapp"></div>
       </div>
@@ -35,24 +33,34 @@
   </div>
   <ul class="hero-list">
     <li class="hero-item">
-      <a href="https://www.instagram.com/goitclub/" class="hover-link"
+      <a
+        href="https://www.instagram.com/goitclub/"
+        class="hover-link"
+        target="_blank"
         >Instagram</a
       >
     </li>
     <li class="hero-item">
-      <a href="https://www.facebook.com/goITclub/" class="hover-link"
+      <a
+        href="https://www.facebook.com/goITclub/"
+        class="hover-link"
+        target="_blank"
         >Facebook</a
       >
     </li>
     <li class="hero-item">
       <a
         href="https://www.linkedin.com/school/goit-start-your-career-in-it"
+        target="_blank"
         class="hover-link"
         >Linkedin</a
       >
     </li>
     <li class="hero-item">
-      <a href="https://github.com/1ster14ka/js-avengers" class="hover-link"
+      <a
+        href="https://github.com/1ster14ka/js-avengers"
+        class="hover-link"
+        target="_blank"
         >GitHub</a
       >
     </li>
